# projet_microservice_2

./: .gitignore  README.md  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt
services/: __init__.py
services/customer_service/: Dockerfile  main.py
services/customer_service/application/: dtos.py
services/customer_service/application/services/: crud_services.py
services/customer_service/domain/: entities.py
services/customer_service/infrastructure/db/: repository.py
services/gateway_service/: Dockerfile  main.py
services/gateway_service/application/: dtos.py
services/gateway_service/infrastructure/: service_client.py
services/inventory_service/: Dockerfile  main.py
services/inventory_service/application/: dtos.py
services/inventory_service/application/services/: crud_services.py
services/inventory_service/domain/: entities.py  events.py
services/inventory_service/infrastructure/db/: repository.py
services/order_service/: Dockerfile  main.py
services/order_service/application/: dtos.py
services/order_service/application/services/: crud_services.py
services/order_service/domain/: entities.py  events.py
services/pricing_service/: Dockerfile  main.py
services/pricing_service/application/: dtos.py
services/pricing_service/domain/: entities.py  events.py
services/product_service/: Dockerfile  main.py
services/product_service/application/: dtos.py
services/product_service/domain/: entities.py  events.py
services/shared/: db_config.py  rabbitmq_client.py
web/: index.html
(+5 files in other folders)
