[project]
name = "projet-microservice-2"
version = "1.0.0"
description = "Projet de TP microservices E-Commerce (FastAPI, PostgreSQL, RabbitMQ)"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "sqlalchemy==2.0.23",
  "psycopg2-binary==2.9.9",
  "pydantic==2.5.0",
  "pydantic-settings==2.1.0",
  "email-validator==2.1.0",
  "pika==1.3.2",
  "python-dotenv==1.0.0",
  "aiofiles==23.2.1",
  "httpx==0.25.2",
]
